inferno-core/test/should-pass/00.simple.inferno
let x = 2 in
assert x ** x > 1 in
0.0