inferno-core/test/should-fail/00.simple.inferno
assert #false in
0.0